# Aethelred

./: .gitignore  Cargo.toml  README.md  live-demo-v2.sh
aethel-cli/: Cargo.toml
aethel-cli/src/: main.rs
aethel-common/: Cargo.toml  build.rs
aethel-common/proto/: aethel.proto
aethel-common/src/: error.rs  lib.rs
aethel-common/src/proto/: aethel.proto
aethel-d/: Cargo.toml
aethel-d/src/: main.rs  network.rs
aethel-net/: Cargo.toml
aethel-run/: Cargo.toml
aethel-run/src/: container.rs  error.rs  lib.rs  main.rs  namespaces.rs  process.rs
aethel-storage/: Cargo.toml
aethel-storage/src/: error.rs  lib.rs
aethel-tests/: Cargo.toml
aethel-tests/tests/: e2e.rs
images/demo-alpine/rootfs/: live-demo-v2.sh
tests/: crucible_test_suite.rs
