[package]
name = "aethel-d"
version = "0.1.0"
edition = "2021"

[dependencies]
aethel-common = { path = "../aethel-common" }
aethel-run = { path = "../aethel-run" }
aethel-storage = { path = "../aethel-storage" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.2.2", features = ["v4"] }
nix = { workspace = true }
rtnetlink = "0.13.0"
futures = "0.3"
thiserror = "1.0"
hyper = "0.14"

[build-dependencies]
tonic-build = "0.11"