[package]
name = "aethel-d"
version = "0.1.0"
edition = "2021"

[dependencies]
aethel-common = { path = "../aethel-common" }
aethel-run = { path = "../aethel-run" }
aethel-storage = { path = "../aethel-storage" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.2.2", features = ["v4"] }
nix = { version = "0.28.0", features = ["signal"] }
rtnetlink = "0.13.0"

[build-dependencies]
tonic-build = "0.11"
